# ai-brother

./: .gitignore  .knownPackages  ADVANCED_FEATURES_SUMMARY.md  AIModelManager.kt  ANDROID_STUDIO_FIX_SUMMARY.md  AndroidManifest.xml  AppDatabase.kt  AppRoot.kt  BRANCH_CONSOLIDATION_SUMMARY.md  BottomNavBar.kt  BrainRepository.kt  BrainScreen.kt  BrainViewModel.kt  CMakeLists.txt  COMPLETION_REPORT.md  ChatScreen.kt  ConversationManager.kt  FEATURE_COMPLETION_REPORT.md  FINAL_IMPLEMENTATION_SUMMARY.md  FIXES_APPLIED.md  FileScreen.kt  GITHUB_SETUP_INSTRUCTIONS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  ImageScreen.kt  KnowledgeScreen.kt  LLAMA_INTEGRATION_GUIDE.md  LLAMA_INTEGRATION_STATUS.md  LLMManagementScreen.kt  LLMManagementViewModel.kt  LLMManager.kt  LLM_IMPROVEMENTS.md  LlamaInterface.kt  LlamaRunner.kt  MODEL-FEATURES.md  MODEL_DISTRIBUTION_SETUP.md  MainActivity.kt  MemoryDao.kt  MemoryDatabase.kt  MemoryEntity.kt  (+38 more)
app/: build.gradle.kts  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/prelightwight/aibrother/: AppRoot.kt  BrainRepository.kt  ChatScreen.kt  KnowledgeGraph.kt  KnowledgeScreen.kt  MemoryDao.kt  MemoryDatabase.kt  ModelDownloader.kt  SettingsViewModel.kt  Utils.kt  VoiceManager.kt
app/src/main/res/values/: colors.xml  themes.xml
models/: ModelCatalog.kt
res/values/: colors.xml  themes.xml
src/main/: AndroidManifest.xml
src/main/cpp/: android_compat.h  native-lib.cpp
src/main/java/com/prelightwight/aibrother/: AppRoot.kt  BrainFragment.kt  ChatFragment.kt  ChatMessage.kt  ChatModels.kt  ConversationManager.kt  DataExporter.kt  FileProcessor.kt  FilesFragment.kt  ImagesFragment.kt  MainActivity.kt  ModelsFragment.kt  PlaceholderFragment.kt  SettingsFragment.kt  ThemeManager.kt  TutorialManager.kt
src/main/java/com/prelightwight/aibrother/llm/: LlamaInterface.kt  ModelDownloader.kt
src/main/java/com/prelightwight/aibrother/ui/navigation/: BottomNavBar.kt  NavGraph.kt
src/main/java/com/prelightwight/aibrother/ui/screens/: BrainScreen.kt  ChatScreen.kt  SettingsScreen.kt
src/main/java/com/prelightwight/aibrother/ui/theme/: Theme.kt
src/main/res/drawable/: ai_message_background.xml  ai_message_background_square.xml  user_message_background.xml  user_message_background_square.xml
src/main/res/layout/: activity_main.xml  fragment_chat.xml  fragment_models.xml  item_model.xml
src/main/res/menu/: bottom_nav_menu.xml  toolbar_menu.xml
src/main/res/navigation/: nav_graph.xml
src/main/res/values/: colors.xml  strings.xml  themes.xml
src/main/res/xml/: file_paths.xml  file_provider_paths.xml
